vault-injector/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-node
  namespace: vault
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    component: server
  ports:
    - name: http
      port: 8200
      protocol: TCP
      targetPort: 8200
      nodePort: 30820
    - name: https-internal
      port: 8201
      protocol: TCP
      targetPort: 8201
      nodePort: 30821
